--- a/intel3.2t/sysbench-cfg/benchmark.cfg
+++ b/intel3.2t/sysbench-cfg/benchmark.cfg
@@ -19,8 +19,8 @@ export disk="/dev/${dev_name}"
 export diskp1="/dev/${dev_name}p1"
 export diskp2="/dev/${dev_name}p2"
 export fs_type=xfs
-export mnt_opt=" -o noatime,nodiratime"
-#export mnt_opt=" -o discard,noatime,nodiratime"
+#export mnt_opt=" -o noatime,nodiratime"
+export mnt_opt=" -o discard,noatime,nodiratime"
 export mnt_point_data="/opt/data/intel"
 #export mnt_point_data_pg="/opt/data/intel_pg"
 export run_user=`whoami`
@@ -40,11 +40,11 @@ export logfolder=pg
 export host=localhost
 export user=tcn
 export port=5432
-export dbname=pg_intel
+export dbname=pg_vanda
 #export scale=40
 #export scale=32000
-export fillfact=100
-#export run_time=3600
+export fillfact=75
+#export run_time=1800
 #export jobs=10
 #export clients=100
 #export shared_buffers=52GB
@@ -54,7 +54,7 @@ export sysbench_dir=/usr/local/share/sysbench
 export sysbench_tpcc_dir=/opt/app/benchmark/sysbench-tpcc
 export tbname=sbtest1
 export table_count=8
-export table_size=1000000000
+export table_size=300000000
 export threads=64
 export rpt_interval=5
 export run_time=1800
@@ -71,7 +71,8 @@ export pgsql_index_options="WITH (fillfactor=${fillfact})"
 export table_data_src_file="../../compress/best.txt"
 export workload_set=prepare
 #export rworkload_set="oltp_read_only oltp_update_non_index"
-export rworkload_set="oltp_read_only oltp_update_non_index oltp_update_index oltp_point_select oltp_read_write oltp_write_only"
+export rworkload_set="oltp_read_write"
+#export rworkload_set="oltp_read_only oltp_update_non_index oltp_update_index oltp_point_select oltp_read_write oltp_write_only"
 
 export tpcc_table_count=8
 export tpcc_tbname=customer1
@@ -82,6 +83,7 @@ export tpcc_workload_set="prepare run"
 
 # export test case identifier - cmpr-cup-aw-ratio
 export case_id=""
+export cp_data=1
 
 # fio configuration
 export fiot=60
